# AI_Agents

./: .gitignore  README.md  pyproject.toml  test_setup.py
Module0/project_0_1_research_assistant/: main.py
Module0/project_0_2_email_generator/: main.py
Module0/project_0_3_basic_chatbot/: main.py
Module1/Project_1.2_Output_Formatter/: main.py
Module1/Project_1.3_Email_IntentClassifier/: main.py
Module1/project_1_1_prompt_playground/: main.py
Module10/10_1_ai_pr_code_reviewer/: main.py  sample_payload.json
Module2/Project2.2_AI_TextImprover/: main.py
Module2/Project2.3_DataExtractor/: main.py
Module2/Project_2.1_Resume_Analyzer/: main.py
Module3/Project3.1_AI_SQL_Assistant/: main.py
Module3/Project3.2_Web_Search_Agent/: main.py
Module3/Project3.3_Multi_Step_task/: main.py
Module4/Project4.1_Reasearch_Copilot/: main.py
Module4/Project4.2_Meeting_Notes/: main.py
Module4/project_4_3_customer_support/: main.py
Module5/project_5_1_ai_software_engineering_team/: main.py
Module5/project_5_2_product_launch_team/: main.py
Module5/project_5_3_hiring_assistant_team/: main.py
Module6/6.1.Customer_Support/: main.py
Module6/6_3_approval_workflow/: main.py
Module7/7.2.Code_Review_Agents/: main.py
Module7/7.3.Problem_Solving/: main.py
Module8/8.1_Internal_Data _Assistant/: main.py  mcp_server.py
Module8/8_2_knowledge_base_agent/: knowledge_base.json  main.py  mcp_server.py
Module8/8_3_trading_simulation_agent/: main.py  mcp_server.py
Module9/9_1_debug_dashboard/: main.py
community_contributions/: order_processor.py  pr_review_test.py
(+71 files in other folders)
