[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.12.3",
    "beautifulsoup4>=4.14.3",
    "crewai<1.0",
    "crewai-tools>=0.76.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-openai>=1.1.9",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "openai<2",
    "openai-agents>=0.3.3",
    "pandas>=3.0.3",
    "pyautogen>=0.10.0",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.0",
    "rich<15",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]
